Alignment fixes

--- a/css/index.css
+++ b/css/index.css
@@ -40,9 +40,3 @@ h2 {
     color: #40938e;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
-
-@media screen and (max-width: 1040px) {
-
-    
-
-}
