--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -14,6 +14,10 @@ body {
     border-bottom: 1px solid purple;
 }
 
+.col-sm-6 {
+    padding: 0px
+}
+
 section {
     background-color: rgb(245, 240, 240);
     width: 960px;
@@ -59,7 +63,8 @@ img {
 }
 
 .card {
-    margin: 10px;
+    margin: auto;
+    margin-bottom: 20px;
 }
 
 .card-body {
